--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "live-server": "^1.2.2",
     "sass": "^1.54.6"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.0"
   }
 }
